<resources>
    <string name="app_name" translatable="false">Pro Trip</string>
    <string name="app_title" translatable="false">MAKE YOUR TRIP PRO</string>
    <string name="app_description">Travel the world with a group of new friends.We will be happy to provide you with all the informations that can safely make you descovring the world.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="welcome">WELCOME,</string>
    <string name="start">Sign up to start your adventure</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Home</string>
    <string name="title_activity_maps2">Map</string>
    <string name="register">Don\'t have account? Signup</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="destination_hint">Enter your destination here</string>
    <string name="my_trips">My Trips</string>
    <string name="hint_send_msg">Double click to send message!</string>
    <string name="conversation">Conversation</string>
    <string name="admin_gmail_com" translatable="false">admin@gmail.com</string>
    <string name="_2127_07_19_39_30" translatable="false">+2127 07 19 39 30</string>
    <string name="contact_me">Contact me</string>
    <string name="description">Description</string>
    <string name="describe_yourself">Describe yourself</string>
    <string name="_2020" translatable="false">2020</string>
    <string name="seen" translatable="false">Seen</string>
    <string name="forgot_password">Forgot password !</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="click_on">Enter your email, and click on reset, you will receive an email to reset your password</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="admin_mail_com" translatable="false">admin@mail.com</string>
    <string name="_2120707193930" translatable="false">+2120707193930</string>
    <string name="phone_number">Phone number</string>
    <string name="age">Age</string>
    <string name="search">Search...</string>
    <string name="users" translatable="false">Users</string>
    <string name="my_friends">My friends</string>
    <string name="settings">Settings</string>
    <string name="change_your_password">Change your password</string>
    <string name="change">CHANGE</string>
    <string name="password_">PASSWORD</string>
    <string name="make_sure_you_remember_your_password">Make sure you remember your password</string>
    <string name="change_password">Change password</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="enter_your_current_email">Enter your current email</string>
    <string name="enter_your_new_email">Enter your new email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email">Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_your_email">Change your email</string>
    <string name="account_settings">Account Settings</string>
    <string name="manage_information_about_and_your_account" translatable="false">Manage information about and your account</string>
    <string name="manage_information_about_yoy_and_your_account" translatable="false">Manage information about yoy and your account</string>
    <string name="manage_information_about_your_account">Manage information about your account</string>
    <string name="account_deletion">Account Deletion</string>
    <string name="once_you_delete_your_account_you_ll_lose_all_your_private_information_about_your_trips_and_your_contacts">Once you delete your account, you\'ll lose all your private information, about your trips and your contacts.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="delete_account">Delete account</string>
    <string name="to_delete_your_account_confirm_your_email_and_password">To delete your account, confirm your email and password</string>
    <string name="years_old">years old</string>

</resources>
