<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DeleteUserActivity">

    <ImageButton
        android:id="@+id/back_user"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@null"
        android:src="@drawable/ic_back_password"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp" />
    
    <TextView
        android:id="@+id/text8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_deletion"
        android:textColor="	#FF0000"
        android:layout_below="@id/back_user"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp" />
    <TextView
        android:id="@+id/text9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/once_you_delete_your_account_you_ll_lose_all_your_private_information_about_your_trips_and_your_contacts"
        android:textColor="#000000"
        android:layout_below="@id/text8"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp" />

    <TextView
        android:id="@+id/text10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_delete_your_account_confirm_your_email_and_password"
        android:textColor="#000000"
        android:layout_below="@id/text9"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_below="@id/text10"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textPassword">

    <EditText
        android:id="@+id/email_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_below="@id/textInputLayout5"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">

        <EditText
            android:id="@+id/password_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="477dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_below="@id/textInputLayout2"
        android:background="@drawable/button_delete_account"
        android:text="@string/delete_account"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_60sdp" />


</RelativeLayout>