<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.SettingsActivity">


    <include layout="@layout/toolbar_settings"
        android:id="@+id/toolbar_settings"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_settings"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/account_settings"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="@dimen/_10sdp" />
    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_below="@id/text"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/manage_information_about_your_account"
        android:textColor="#000"
        android:layout_marginStart="@dimen/_10sdp" />


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text6"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@drawable/transparent_color"
            android:src="@drawable/ic_update_password"
            android:layout_marginStart="@dimen/_8sdp" />

        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_your_password"
            android:textColor="#000"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@drawable/transparent_color"
            android:src="@drawable/ic_mail_settings"
            android:layout_marginStart="@dimen/_8sdp" />

        <TextView
            android:id="@+id/change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_your_email"
            android:textColor="#000"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear4"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@drawable/transparent_color"
            android:src="@drawable/ic_baseline_delete_forever_24"
            android:layout_marginStart="@dimen/_8sdp" />

        <TextView
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_your_account"
            android:textColor="#000"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"/>
    </LinearLayout>

</RelativeLayout>